--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
                     </div>
                 </a>
         </div>
-        <div class="caption center footer">Enclosure created by b0kch01 &amp; Silica</div>
+        <div class="caption center footer">Enclosure created by b0kch01</div>
     </div>
 
 </body>
