--- a/depiction/web/co.Polarizz.tester12.html
+++ b/depiction/web/co.Polarizz.tester12.html
@@ -90,7 +90,7 @@ Note: <strong>This package only works on iOS 12</strong></p>
 </div>
             </div>
         </div>
-        <div class="caption center footer">Enclosure created by b0kch01 &amp; Silica</div>
+        <div class="caption center footer">Enclosure created by b0kch01</div>
     </div>
 </body>
 <script>compatible("12.0","12.4","iOS 12.0 to 12.4");externalize()</script>
