--- a/depiction/web/co.Polarizz.tester13.html
+++ b/depiction/web/co.Polarizz.tester13.html
@@ -85,7 +85,7 @@
 </div>
             </div>
         </div>
-        <div class="caption center footer">Enclosure created by b0kch01 &amp; Silica</div>
+        <div class="caption center footer">Enclosure created by b0kch01</div>
     </div>
 </body>
 <script>compatible("12.0","14.0","iOS 12.0 to 14.0");externalize()</script>
